--- a/Data/ConfusedDevelopProject.Data/ConfusedDevelopProject.Data.csproj
+++ b/Data/ConfusedDevelopProject.Data/ConfusedDevelopProject.Data.csproj
@@ -81,7 +81,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Entities\" />
+    <Folder Include="Mappings\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
