--- a/Application/ConfusedDevelopProject.Services/ConfusedDevelopProject.Services.csproj
+++ b/Application/ConfusedDevelopProject.Services/ConfusedDevelopProject.Services.csproj
@@ -78,6 +78,8 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Implementations\LoginService.cs" />
+    <Compile Include="Interfaces\ILoginService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -94,6 +96,7 @@
       <Name>ConfusedDevelopProject.Data</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
