--- a/Web/ConfusedDevelopProject.Admin/packages.config
+++ b/Web/ConfusedDevelopProject.Admin/packages.config
@@ -2,8 +2,8 @@
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net452" />
   <package id="bootstrap" version="3.0.0" targetFramework="net452" />
-  <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
-  <package id="EntityFramework.zh-Hans" version="6.1.3" targetFramework="net452" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net452" />
+  <package id="EntityFramework.zh-Hans" version="6.2.0" targetFramework="net452" />
   <package id="jQuery" version="1.10.2" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
@@ -18,6 +18,10 @@
   <package id="Microsoft.AspNet.Razor.zh-Hans" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Web.Optimization.zh-Hans" version="1.1.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi" version="5.2.6" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.6" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.6" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.6" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages.zh-Hans" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net452" />
@@ -44,5 +48,7 @@
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
+  <package id="Unity" version="5.8.6" targetFramework="net452" />
+  <package id="Unity.Mvc5" version="1.3.0" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
