--- a/Application/ConfusedDevelopProject.Services/ConfusedDevelopProject.Services.csproj
+++ b/Application/ConfusedDevelopProject.Services/ConfusedDevelopProject.Services.csproj
@@ -78,8 +78,13 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Implementations\CommonService.cs" />
     <Compile Include="Implementations\LoginService.cs" />
+    <Compile Include="Implementations\UserService.cs" />
+    <Compile Include="Interfaces\ICommonService.cs" />
     <Compile Include="Interfaces\ILoginService.cs" />
+    <Compile Include="Interfaces\IUserService.cs" />
+    <Compile Include="Models\UserTableInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
