--- a/Data/ConfusedDevelopProject.Core/ConfusedDevelopProject.Core.csproj
+++ b/Data/ConfusedDevelopProject.Core/ConfusedDevelopProject.Core.csproj
@@ -43,6 +43,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Dapper, Version=1.50.5.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Dapper.1.50.5\lib\net451\Dapper.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
       <Private>True</Private>
@@ -94,9 +98,12 @@
     <Compile Include="DbContexts\MyDbContext.cs" />
     <Compile Include="DbHelper\ModelConvertHelper.cs" />
     <Compile Include="DbHelper\SqlHelper.cs" />
+    <Compile Include="Domain\Model\BasePageQueryInfo.cs" />
+    <Compile Include="Domain\Model\BasePageResultInfo.cs" />
     <Compile Include="Domain\Model\ResultInfo.cs" />
     <Compile Include="Domain\Model\UserInfo.cs" />
     <Compile Include="Extensions\BaseDBEntityExtend.cs" />
+    <Compile Include="Extensions\PageQueryExtend.cs" />
     <Compile Include="Extensions\SqlExtension.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserContext\IUserContext.cs" />
